--- a/output/index.html
+++ b/output/index.html
@@ -7671,7 +7671,7 @@ var _user$project$Main$view = function (_p3) {
 							[]),
 						_elm_lang$core$Native_List.fromArray(
 							[
-								_elm_lang$html$Html$text('Take two strings, convert them into arrays, concatenate the arrays, convert back to string, display result:')
+								_elm_lang$html$Html$text('Convert two strings into arrays, concatenate the arrays, convert back to string, display result:')
 							]))
 					]),
 				A2(
